--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
   <body>
     Hello Class
-    <a href="/EiffelTower/eiffel-tower.html"> Eiffel Tower Web Page </a>  
+    <a href="lawman123.github.io/EiffelTower/eiffel-tower.html"> Eiffel Tower Web Page </a>  
   </body>
 
 </html>
