--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <html>
 
+  <head>
+	<link href = "styles.css" rel = "stylesheet" type = "text/css">
+	<title>Law's Homepage</title>
+  </head>
+
   <body>
-    Hello Class
-    <a href="lawman123.github.io/EiffelTower/eiffel-tower.html"> Eiffel Tower Web Page </a>  
+	<div id="page">
+		<div id"logoimg">
+			<img src="/Pictures/Law'sHub.png">
+		</div>
+		Hello Class
+		<a href="lawman123.github.io/EiffelTower/eiffel-tower.html"> Eiffel Tower Web Page </a>  
+	</div>
   </body>
 
 </html>
