--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <body>
 	<div id="page">
-		<div id"logoimg">
+		<div id="logoimg">
 			<img src="/Pictures/Law'sHub.png">
 		</div>
 		Hello Class
