--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   </head>
 
   <body>
-	<div id="page">
+	<div id ="header">	
 		<div id="logoimg">
 			<img src="/Pictures/Law'sHub.png">
 		</div>
+	</div>
+	<div id="page">
 		Hello Class
 		<a href="lawman123.github.io/EiffelTower/eiffel-tower.html"> Eiffel Tower Web Page </a>  
 	</div>
