--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
 	<div id ="header">	
 		<div id="logoimg">
-			<img src="/Pictures/Law'sHub.png">
+			<img src="Law'sHub.png">
 		</div>
 	</div>
 	<div id="page">
