--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 		<div id="logoimg">
 			<img src="Law'sHub.png">
 		</div>
+		<div class="dropdown">
+			<button class="dropbtn"><img src="dropdown.png">
+				<i class="fa fa-caret-down"></i>
+			</button>
+			<div class="dropdown-content">
+				<a href="#">Link 1</a>
+				<a href="#">Link 2</a>
+				<a href="#">Link 3</a>
+			</div>
+		</div>
 	</div>
 	<div id="page">
 		Hello Class
