--- a/index.html
+++ b/index.html
@@ -15,16 +15,19 @@
 				<i class="fa fa-caret-down"></i>
 			</button>
 			<div class="dropdown-content">
-				<a href="#">Link 1</a>
-				<a href="#">Link 2</a>
-				<a href="#">Link 3</a>
+				<a href="index.html">Front Page</a>
+				<a href="#">Portfolio</a>
+				<a href="#">School Projects</a>
+				<a href="#">About</a>
 			</div>
 		</div>
 	</div>
 	<div id="page">
-		Hello Class
+		<h1>Welcome to Law's website</h1>
 		<a href="lawman123.github.io/EiffelTower/eiffel-tower.html"> Eiffel Tower Web Page </a>  
 	</div>
+	<div id="footer">
+	</div>
   </body>
-
+  <div style="clear:both;"></div>
 </html>
