--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			</button>
 			<div class="dropdown-content">
 				<a href="index.html">Front Page</a>
-				<a href="#">Portfolio</a>
+				<a href="/EiffelTower/eiffel-tower">Portfolio %temporarily eiffeltowerlink%</a>
 				<a href="#">School Projects</a>
 				<a href="#">About</a>
 			</div>
