--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	</div>
 	<div id="page">
 		<h1>Welcome to Law's website</h1>
+		time for some crackhead energy
 	</div>
 	<div id="footer">
 	</div>
