--- a/EiffelTower/eiffel-tower.html
+++ b/EiffelTower/eiffel-tower.html
@@ -7,6 +7,17 @@
 <body>
 	<div id="page">
 		<div id = "header">
+			<div class="dropdown">
+			<button class="dropbtn"><img src="dropdown.png">
+				<i class="fa fa-caret-down"></i>
+			</button>
+			<div class="dropdown-content">
+				<a href="index.html">Front Page</a>
+				<a href="/EiffelTower/eiffel-tower">Portfolio %temporarily eiffeltowerlink%</a>
+				<a href="#">School Projects</a>
+				<a href="#">About</a>
+			</div>
+		</div>
 			<h1>The Eiffel Tower</h1>
 			<h5>Constructed 1887-1889</h5>
 		</div>
