--- a/EiffelTower/eiffel-tower.html
+++ b/EiffelTower/eiffel-tower.html
@@ -10,7 +10,7 @@
 			<i class="fa fa-caret-down"></i>
 		</button>
 		<div class="dropdown-content">
-			<a href="lawman123.github.io/index.html">Front Page</a>
+			<a href="../index.html">Front Page</a>
 			<a href="/EiffelTower/eiffel-tower">Portfolio %temporarily eiffeltowerlink%</a>
 			<a href="#">School Projects</a>
 			<a href="#">About</a>
