--- a/EiffelTower/eiffel-tower.html
+++ b/EiffelTower/eiffel-tower.html
@@ -9,7 +9,7 @@
 		<button class="dropbtn"><img src="dropdown.png">
 			<i class="fa fa-caret-down"></i>
 		</button>
-		<div class="dropdown-content">
+		<div class="../dropdown-content">
 			<a href="../../index.html">Front Page</a>
 			<a href="/EiffelTower/eiffel-tower">Portfolio %temporarily eiffeltowerlink%</a>
 			<a href="#">School Projects</a>
