updated icon requirements

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
   <head>
 	<link href = "styles.css" rel = "stylesheet" type = "text/css">
+	<link REL="SHORTCUT ICON" HREF="favicon.ico">
 	<title>Law's Homepage</title>
   </head>
 
