--- a/schoolprojects-hub.html
+++ b/schoolprojects-hub.html
@@ -1,7 +1,8 @@
 <html>
 
   <head>
-	<link href = "styles.css" rel = "stylesheet" type = "text/css">
+	<link href = "styles.css" rel = "stylesheet" type = "text/css">	
+	<link REL="SHORTCUT ICON" HREF="favicon.ico">
 	<title>LawHub</title>
   </head>
 
