--- a/EiffelTower/eiffel-tower.html
+++ b/EiffelTower/eiffel-tower.html
@@ -1,7 +1,8 @@
 <html>
 <head>
 	<title>The Eiffel Tower</title>
-	<link href = "styles.css" rel = "stylesheet" type = "text/css">
+	<link href = "styles.css" rel = "stylesheet" type = "text/css">	
+	<link REL="SHORTCUT ICON" HREF="../../favicon.ico">
 </head>
 
 <body>
