--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 	<link href = "styles.css" rel = "stylesheet" type = "text/css">
 	<link REL="SHORTCUT ICON" HREF="favicon.ico">
-	<title>Law's Homepage</title>
+	<title>LawHub</title>
   </head>
 
   <body>
