--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
   <head>
 	<link href = "styles.css" rel = "stylesheet" type = "text/css">
-	<link REL="SHORTCUT ICON" HREF="favicon.ico">
+	<link rel="shortcut icon" href="favicon.ico">
 	<title>LawHub</title>
   </head>
 
