--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
   <head>
 	<link href = "styles.css" rel = "stylesheet" type = "text/css">
-	<link rel="shortcut icon" href="favicon.ico">
+	<link href="favicon.ico" rel="shortcut icon" >
 	<title>LawHub</title>
   </head>
 
