--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
   <head>
 	<link href = "styles.css" rel = "stylesheet" type = "text/css">
-	<!--<link href="favicon.ico" rel="shortcut icon" >-->
+	<link href="favicon.ico" rel="icon">
 	<title>LawHub</title>
   </head>
 
