created more unifrom links

--- a/infopage.html
+++ b/infopage.html
@@ -19,7 +19,7 @@
 				<a href="index.html">Front Page</a>
 				<a href="/EiffelTower/eiffel-tower">Portfolio %temporarily eiffeltowerlink%</a>
 				<a href="/schoolprojects-hub">School Projects</a>
-				<a href="/infopage">About</a>
+				<a href="#">About</a>
 			</div>
 		</div>
 	</div>
