--- a/EiffelTower/eiffel-tower.html
+++ b/EiffelTower/eiffel-tower.html
@@ -13,8 +13,8 @@
 		<div class="../dropdown-content">
 			<a href="../../index.html">Front Page</a>
 			<a href="/EiffelTower/eiffel-tower">Portfolio %temporarily eiffeltowerlink%</a>
-			<a href="#">School Projects</a>
-			<a href="#">About</a>
+			<a href="/schoolprojects-hub">School Projects</a>
+			<a href="/infopage">About</a>
 		</div>
 	</div>
 	<div id="page">
