updated navigation links, and added placeholder pages for undone work

--- a/EiffelTower/eiffel-tower.html
+++ b/EiffelTower/eiffel-tower.html
@@ -11,10 +11,10 @@
 			<i class="fa fa-caret-down"></i>
 		</button>
 		<div class="../dropdown-content">
-			<a href="../../index.html">Front Page</a>
-			<a href="/EiffelTower/eiffel-tower">Portfolio %temporarily eiffeltowerlink%</a>
-			<a href="/schoolprojects-hub">School Projects</a>
-			<a href="/infopage">About</a>
+				<a href="index.html">Front Page</a>
+				<a href="/portfolio">Portfolio</a>
+				<a href="/schoolprojects-hub">School Projects</a>
+				<a href="/infopage">About</a>
 		</div>
 	</div>
 	<div id="page">
