--- a/schoolprojects-hub.html
+++ b/schoolprojects-hub.html
@@ -17,7 +17,7 @@
 			</button>
 			<div class="dropdown-content">
 				<a href="index.html">Front Page</a>
-				<a href="/EiffelTower/eiffel-tower">Portfolio %temporarily eiffeltowerlink%</a>
+				<a href="/portfolio">Portfolio</a>
 				<a href="/schoolprojects-hub">School Projects</a>
 				<a href="/infopage">About</a>
 			</div>
