--- a/infopage.html
+++ b/infopage.html
@@ -23,8 +23,8 @@
 			</div>
 		</div>
 	</div>
-	<div id="page">
-		<h1>Welcome to Law's website</h1>
+	<div id="displaypage">
+		<h1>About me</h1>
 		time for some crackhead energy
 	</div>
 	<div id="footer">
