--- a/infopage.html
+++ b/infopage.html
@@ -17,9 +17,9 @@
 			</button>
 			<div class="dropdown-content">
 				<a href="index.html">Front Page</a>
-				<a href="/portfolio">Portfolio</a>
-				<a href="/schoolprojects-hub">School Projects</a>
-				<a href="/infopage">About</a>
+				<a href="portfolio.html">Portfolio</a>
+				<a href="schoolprojects-hub.html">School Projects</a>
+				<a href="infopage.html">About</a>
 			</div>
 		</div>
 	</div>
