--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<h1>Welcome to Law's website</h1>
 		time for some crackhead energy
 	</div>
-	<div id="footer">
+	<div style="footer">
 	</div>
   </body>
   <div style="clear:both;"></div>
