--- a/infopage.html
+++ b/infopage.html
@@ -25,9 +25,12 @@
 	</div>
 	<div id="displaypage">
 		<h1>About me</h1>
-		time for some crackhead energy
+	<div class="footer">
+		<div id = "minititle" style="text-align:center;">
+			I cant be bothered to fill this out rn I cant lie
+		</div>
+		
 	</div>
-	<div id="footer">
 	</div>
   </body>
   <div style="clear:both;"></div>
