started allowing pages to resize

--- a/schoolprojects-hub.html
+++ b/schoolprojects-hub.html
@@ -36,6 +36,7 @@
 	</div>
 	<div class="centrecolumn">
 		<div class="projectbox">
+			<img src="eiffeltowerimg.jpg">
 			<div class="projectboxfooter">
 				<h1>N/A</h1>
 			</div>
@@ -43,6 +44,7 @@
 	</div>
 	<div class="rightcolumn">
 		<div class="projectbox">
+			<img src="eiffeltowerimg.jpg">
 			<div class="projectboxfooter">
 				<h1>N/A</h1>
 			</div>
