--- a/schoolprojects-hub.html
+++ b/schoolprojects-hub.html
@@ -36,7 +36,7 @@
 	</div>
 	<div class="centrecolumn">
 		<div class="projectbox">
-			<img src="eiffeltowerimg.jpg">
+			<img src="">
 			<div class="projectboxfooter">
 				<h1>N/A</h1>
 			</div>
@@ -44,7 +44,7 @@
 	</div>
 	<div class="rightcolumn">
 		<div class="projectbox">
-			<img src="eiffeltowerimg.jpg">
+			<img src="">
 			<div class="projectboxfooter">
 				<h1>N/A</h1>
 			</div>
